# neural_network_explanation_presentation_animations

./: .gitignore  pyproject.toml  quick_ffmpeg_conversion.py
neural_network_explanation_presentation_animations/: configuration.py  isometric_neurons_looking_at_pixels_scene.py  isometric_neurons_looking_at_pixels_sub_scene.py  layers_building_complexity_sub_scene.py  main_scene.py  mobject_set_operations.py  three_d_neurons_looking_at_pixels_scene.py
