[tool.poetry]
name = "neural_network_explanation_presentation_animations"
version = "0.1.0"
description = ""
authors = ["Greg Olmschenk <greg@olmsachenk.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
manim = "^0.16.0"
numpy = "^1.23.2"
trimesh = "^3.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

